--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/images/game_sprite.png
     - assets/images/swipe_instructions.svg
     - assets/images/keyboard_instructions.svg
+    - assets/images/score.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
