✅ add VirtualGrid unit test

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,5 +19,7 @@ jobs:
       - name: Install
         run: flutter pub get
       - name: Lint
-        run: |
-          flutter analyze
+        run: flutter analyze
+      - name: Test
+        run: flutter test
+      
