--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.8.0
   flutter_svg: ^2.0.7
+  flame_bloc: ^1.10.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
